<resources>
    <string name="app_name">rick-and-morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delimiter">-</string>
    <string name="location">Location:</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="type">Type:</string>
    <string name="character_avatar">Character Avatar</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
</resources>